[package]
name = "rjimp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[lib]
name = "rjimp"
path = "./src/lib.rs"

[dependencies]
base64 = "0.21.0"
derive_more = "0.99.17"
tokio.workspace = true

jpeg-decoder = { version = "0.3.0", optional = true }
jpeg-encoder = { version = "0.5.1", optional = true }

png = { version = "0.17.7", optional = true }

[features]
png = ["dep:png"]
jpeg = ["dep:jpeg-decoder", "dep:jpeg-encoder"]
